# NVapi-write-value-to-monitor

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  build.bat  build.sh  build_mingw.bat  targetver.h  toggle_input.sh  writeValueToDisplay.cpp
